# network-manager-ipop

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  network-manager-ipop.doap  nm-ipop-service.conf  nm-ipop-service.name  nm-ipop-service.name.in  nm-ipop.desktop.in  nm-test-helpers.h
auth-dialog/: Makefile.am  main.c  vpn-password-dialog.c  vpn-password-dialog.c.patch
common/: Makefile.am  utils.c  utils.h
kde/: CMakeLists.txt
kde/backends/NetworkManager/: config-nm09backend.h
kde/libs/: CMakeLists.txt
kde/libs/client/: activatableinterface.cpp  activatableinterface.h  gsminterfaceconnectioninterface.cpp  gsminterfaceconnectioninterface.h  interfaceconnectioninterface.cpp  interfaceconnectioninterface.h  networkmanagementinterface.cpp  networkmanagementinterface.h  wirelessinterfaceconnectioninterface.cpp  wirelessinterfaceconnectioninterface.h  wirelessnetworkinterface.cpp  wirelessnetworkinterface.h
kde/libs/internals/: knm_compiler  knm_compiler.shell  knmserviceprefs.cpp  knmserviceprefs.h
kde/settings/configshell/: networkmanagement_configshell  networkmanagement_configshell.shell
kde/solidcontrolfuture/libs/solid/control/: org_kde_solid_networking.cpp  org_kde_solid_networking.h
kde/vpnplugins/: CMakeLists.txt
kde/vpnplugins/ipop/: CMakeLists.txt  ipop.cpp  ipop.h  ipopauth.cpp  ipopauth.h  ipopprop.ui  ipopwidget.cpp  ipopwidget.h  networkmanagement_ipopui.desktop  nm-ipop-service.h
po/: POTFILES.in
properties/: Makefile.am  auth-helpers.c  auth-helpers.h  import-export.c  import-export.h  nm-ipop-dialog.ui  nm-ipop.c  nm-ipop.h
properties/tests/: Makefile.am  test-import-export.c
src/: Makefile.am  nm-ipop-service-openvpn-helper.c  nm-ipop-service.c  nm-ipop-service.h
